# freegin-ai

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.config/: template.toml
.github/workflows/: rust.yml
docs/: 01-architecture-overview.md  02-directory-structure.md  model-catalog-guide.md  model-catalog-plan.md  next-steps.md  providers-setup.md  update-providers-and-models.md
docs/2025-09-23-project-overview.md/: 2025-09-28-a-technical-framework-for-the-simulation-and-optimization-of-irish-dance-feis-scheduling.md
docs/man/: freegin-ai.1
scripts/: bootstrap.sh
src/: catalog.rs  config.rs  credentials.rs  database.rs  error.rs  health.rs  lib.rs  main.rs  models.rs  routes.rs  usage.rs
src/providers/: cerebras.rs  clarifai.rs  cloudflare.rs  deepseek.rs  github_models.rs  google.rs  groq.rs  hugging_face.rs  mistral.rs  mod.rs  openai.rs  openrouter.rs  router.rs  together.rs
tests/: providers.rs
